Updated doc for neldermead

--- a/scilab_doc/neldermead/neldermead-simplex-so.tex
+++ b/scilab_doc/neldermead/neldermead-simplex-so.tex
@@ -32,7 +32,7 @@
 \begin{center}
 %% Comment for DVI
 \includegraphics[height=40mm]{scilab_logo}
-\vskip5cm
+\vskip4cm
 
 %% Empty space between the box and the text
 \fboxsep6mm
@@ -42,7 +42,8 @@
 $$\fbox{$
   \begin{array}{c}
   \textbf{Nelder-Mead}\\
-  \textbf{Toolbox Manual}
+  \textbf{Toolbox Manual}\\
+  \textbf{-- Simplex Theory --}
   \end{array}
   $}
 $$
@@ -69,27 +70,14 @@ Micha\"el BAUDIN
 
 \renewcommand{\baselinestretch}{1.18}\small \normalsize
 
-\include{introduction}
-
-\include{overview}
 
 \include{section-simplex}
 
-\include{method-spendley}
-
-\include{method-neldermead}
-
-\include{conclusion}
-
-\include{acknowledgments}
 
 \clearpage
 
 %% Appendix
 \appendix
-\include{nmbibliography}
-
-\include{implementations}
 
 %% Bibliography
 
