--- a/scilab_doc/neldermead/neldermead.bib
+++ b/scilab_doc/neldermead/neldermead.bib
@@ -253,9 +253,9 @@ publisher= {}}
 }
 
 @TECHREPORT{Andersson01multiobjectiveoptimization,
-    author = {Johan Andersson and Linköpings Universitet},
-    title = {Multiobjective Optimization in Engineering Design: Applications to . . .},
-    institution = {Department of Mechanical Engineering, Linköping University},
+    author = {Johan Andersson and Link\"opings Universitet},
+    title = {Multiobjective Optimization in Engineering Design: Application to Fluid Power Systems},
+    institution = {Department of Mechanical Engineering, Link\"oping University},
     year = {2001},
   note={\url{https://polopoly.liu.se/content/1/c6/10/99/74/phdthesis.pdf}, 
   \url{http://www.iei.liu.se/machine/johan-olvander/home"l=en},
@@ -461,4 +461,13 @@ eprint = {http://comjnl.oxfordjournals.org/cgi/reprint/6/2/163.pdf}
  publisher = {ACM},
  address = {New York, NY, USA},
  }
+
+@TECHREPORT{Fan2002,
+    author = {Ellen Fan},
+    title = {Global Optimization Of Lennard-Jones Atomic Clusters},
+    institution = {McMaster University},
+    year = {2002},
+    month = {February},
+    day={26}
+}
 
