--- a/scilab_doc/neldermead/nmbibliography.tex
+++ b/scilab_doc/neldermead/nmbibliography.tex
@@ -177,7 +177,7 @@ satisfy the constraints.
 W. H. Press, Saul A. Teukolsky, William T. Vetterling and Brian P. Flannery, 
 1992
 
-An ANSI C implementation of the Nelder-Mead algorithm is given.
+In this book \cite{NumericalRecipes}, an ANSI C implementation of the Nelder-Mead algorithm is given.
 The initial simplex is based on the axis. 
 The termination criterion is based on the relative difference of the 
 function value of the best and worst vertices in the simplex.
@@ -331,10 +331,10 @@ function typical in penalty methods.
 
 No numerical experiment is presented.
 
-\section{Ölvander, 2001}
+\section{Andersson, 2001}
 
 "Multiobjective Optimization in Engineering Design - Application to fluid Power Systems"
-Johan Ölvander (formerly Andersson), 2001
+Johan Andersson, 2001
 
 This PhD thesis \cite{Andersson01multiobjectiveoptimization} gives a brief overview of the Complex method by Box in 
 section 5.1.
