--- a/scilab/modules/scipad/changelog.txt
+++ b/scilab/modules/scipad/changelog.txt
@@ -1,3 +1,7 @@
+Sylvestre LEDRU, 7/09/09
+ * Japanese localization (Thanks Hiroshi Saito)
+ * version --> 7.20
+
 Sylvestre LEDRU, 25/06/09
  * Catalan version added (thanks to Oriol Gonzalez)
  * version --> 7.19
