--- a/scilab_doc/neldermead/neldermead-spendley-so.tex
+++ b/scilab_doc/neldermead/neldermead-spendley-so.tex
@@ -43,7 +43,7 @@ $$\fbox{$
   \begin{array}{c}
   \textbf{Nelder-Mead}\\
   \textbf{Toolbox Manual}\\
-  \textbf{-- Simplex Theory --}
+  \textbf{-- Spendley et al. algorithm --}\\
   \end{array}
   $}
 $$
@@ -70,14 +70,10 @@ Micha\"el BAUDIN
 
 \renewcommand{\baselinestretch}{1.18}\small \normalsize
 
-
-\include{section-simplex}
-
+\include{method-spendley}
 
 \clearpage
 
-%% Appendix
-\appendix
 
 %% Bibliography
 
