--- a/scilab_doc/neldermead/neldermead.bib
+++ b/scilab_doc/neldermead/neldermead.bib
@@ -212,9 +212,6 @@ publisher= {}}
   ISSN =         {0010-4620},
   bibdate =      {Fri Sep 29 08:51:24 MDT 2000},
   bibsource =    {http://www3.oup.co.uk/computer_journal/hdb/Volume_10/Issue_04/},
-  note={\url{http://www3.oup.co.uk/computer_journal/hdb/Volume_10/Issue_04/100416.sgm.abs.html}, 
-                 \url{http://www3.oup.co.uk/computer_journal/hdb/Volume_10/Issue_04/tiff/416.tif}, 
-                 \url{http://www3.oup.co.uk/computer_journal/hdb/Volume_10/Issue_04/tiff/417.tif}},
   acknowledgement = ack-nhfb,
 }
 
@@ -258,8 +255,7 @@ publisher= {}}
     institution = {Department of Mechanical Engineering, Link\"oping University},
     year = {2001},
   note={\url{https://polopoly.liu.se/content/1/c6/10/99/74/phdthesis.pdf}, 
-  \url{http://www.iei.liu.se/machine/johan-olvander/home"l=en},
-  \url{http://www.machine.ikp.liu.se/index.html?/staff/johan/index.html}}
+  \url{http://www.iei.liu.se/machine/johan-olvander}}
 }
 
 @article{Box1965,
