--- a/scilab_doc/neldermead/neldermead.bib
+++ b/scilab_doc/neldermead/neldermead.bib
@@ -468,3 +468,22 @@ eprint = {http://comjnl.oxfordjournals.org/cgi/reprint/6/2/163.pdf}
     day={26}
 }
 
+@ARTICLE{Singer:2009,
+AUTHOR = {Singer, A. and Nelder, J. },
+TITLE  = {Nelder-Mead algorithm},
+YEAR  = {2009},
+JOURNAL  = {Scholarpedia},
+VOLUME  = {4},
+NUMBER  = {7},
+PAGES  = {2928}
+}
+
+@ARTICLE{Torczon98fromevolutionary,
+    author = {Virginia Torczon and Michael W. Trosset},
+    title = {From Evolutionary Operation to Parallel Direct Search: Pattern Search Algorithms for Numerical Optimization},
+    journal = {Computing Science and Statistics},
+    year = {1998},
+    volume = {29},
+    pages = {396--401}
+}
+
