--- a/scilab_doc/neldermead/section-simplex.tex
+++ b/scilab_doc/neldermead/section-simplex.tex
@@ -66,7 +66,6 @@ prefer to use lengths which are less expensive to compute.
 
 The two oriented lengths $\sigma_-(S)$ and $\sigma_+(S)$ are using the 
 first vertex as the reference point and are defined by 
-
 \begin{eqnarray}
 \label{simplex-sigma}
 \sigma_+(S) = \max_{i=2,n+1} \|\bx_i - \bx_1\|_2 \qquad \textrm { and } \qquad \sigma_-(S) = \min_{i=2,n+1} \|\bx_i - \bx_1\|_2
@@ -123,7 +122,7 @@ optimum.
 
 \begin{figure}
 \begin{center}
-\includegraphics[width=7cm]{simplex_initialfixed.png}
+\includegraphics[width=7cm]{simplex_initialfixed.pdf}
 \end{center}
 \caption{Typical pattern with fixed-shape Spendley's et al algorithm}
 \label{fig-nm-simplex-fixedshape}
